--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,24 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Amy Lee Walton<br />
-        Designer at <a href="http://mapbox.com/">Mapbox</a><br />
-        Instructor at <a href="http://www.mica.edu/Programs_of_Study/Graduate_Programs/Design_Leadership_(MBAMA).html">MICA / John Hopkins Carey Business School</a><br />
+        Florcy Morisset<br />
+        Founder & Director at <a href="http://vivantartcollection.com/">Mapbox</a><br />
+        Student at <a href="http://www.mica.edu/Programs_of_Study/Graduate_Programs/Design_Leadership_(MBAMA).html">MICA / John Hopkins Carey Business School</a><br />
         
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://amyleewalton.com/">amyleewalton.com</a><br />
-        <a href="http://github.com/amyleew/">github.com/amyleew</a><br />
-        <a href="http://twitter.com/amyleew/">twitter.com/amyleew</a><br />
-		amyleewalton (at) gmail (dot) com
+        <a href="http://vivantartcollection.com/">amyleewalton.com</a><br />
+        <a href="http://github.com/fmorisset/">github.com/fmorisset</a><br />
+        <a href="http://twitter.com/vivantlifestyle/">twitter.com/vivantlifestyle</a><br />
+		vivantartcollection (at) gmail (dot) com
       </p>
     </div>
   </div>
 </div>
 
-<a href="http://github.com/amyleew/blog-template"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/cloneme.png" alt="Clone me from GitHub" /></a>
+<a href="http://github.com/fmorisset/Blog2"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/cloneme.png" alt="Clone me from GitHub" /></a>
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
