--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,14 +2,14 @@
     <div class="contact">
       <p>
         Florcy Morisset<br />
-        Founder & Director at <a href="http://vivantartcollection.com/">Mapbox</a><br />
+        Founder & Director at <a href="http://vivantartcollection.com/">Vivant Art Collection</a><br />
         Student at <a href="http://www.mica.edu/Programs_of_Study/Graduate_Programs/Design_Leadership_(MBAMA).html">MICA / John Hopkins Carey Business School</a><br />
         
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://vivantartcollection.com/">amyleewalton.com</a><br />
+        <a href="http://vivantartcollection.com/">vivantartcollection.com</a><br />
         <a href="http://github.com/fmorisset/">github.com/fmorisset</a><br />
         <a href="http://twitter.com/vivantlifestyle/">twitter.com/vivantlifestyle</a><br />
 		vivantartcollection (at) gmail (dot) com
