--- a/css/screen.css
+++ b/css/screen.css
@@ -18,7 +18,7 @@ html, body {
 body {
   background-color: #ad0026;
   font: 13.34px helvetica, arial, clean, sans-serif;
-  *font-size: small;
+  *font-size: medium;
   text-align: center;
 }
 
@@ -39,7 +39,7 @@ a {
 }
 
 a:hover {
-  color: black;
+  color: White;
 }
 
 a:visited {
