--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<a href="http://github.com/fmorisset/Blog2"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/cloneme.png" alt="Clone me from GitHub" /></a>
+<a href="http://github.com/fmorisset/Blog2"><img style="position: absolute; top: 0; right: 0; border: 0;" src="images/vivant%20logo.gif" /></a>
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
