--- a/css/screen.css
+++ b/css/screen.css
@@ -16,7 +16,7 @@ html, body {
 }
 
 body {
-  background-color: #bbbbbb;
+  background-color: #bbbbb;
   font: 13.34px helvetica, arial, clean, sans-serif;
   *font-size: medium;
   text-align: center;
