--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="{{ site.url }}/Blog2">fmorisset</a>
-    <a class="extra" href="{{ site.url }}/Blog2">home</a>
+    <a href="{{ site.url }}/Blog2">Florcy Morisset</a>
+    <a class="extra" href="{{ site.url }}/Blog2">Home</a>
   </div>
   
   {{ content }}
