--- a/css/screen.css
+++ b/css/screen.css
@@ -30,7 +30,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   margin-bottom: 1em;
 }
+h6 {
+  margin-bottom: 1em;
 
+  text-indent: 50px;
+}
 p {
   margin: 1em 0;
 }
