--- a/css/screen.css
+++ b/css/screen.css
@@ -20,9 +20,6 @@ body {
   font: 13.34px helvetica, arial, clean, sans-serif;
   *font-size: medium;
   text-align: center;
-indent {
-
-  text-indent: 50px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -33,7 +30,11 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   margin-bottom: 1em;
 }
+h6 {
+  margin-bottom: 1em;
 
+  text-indent: 50px;
+}
 p {
   margin: 1em 0;
 }
